--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ pyrogram
 tgcrypto
 ytthumb
 python-dotenv
+Flask==2.2.2
+gunicorn==20.1.0
+aiohttp==3.8.2
+Jinja2==3.0.3
+werkzeug==2.2.2
+itsdangerous==2.0.1
